--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,12 +2,16 @@
 	<PropertyGroup>
 		<VersionPrefix>1.0.0</VersionPrefix>
 		<VersionSuffix>alpha.1</VersionSuffix>
-		<Product>FluentNHibernate.AspNetCore.Identity</Product>
+		<PackageId>Fluent.NHibernate.AspNetCore.Identity</PackageId>
+		<Description>Highly customizable ASP.NET Core Identity provider for NHibernate with FluentNHibernate mapping support.</Description>
+		<Product>Fluent.NHibernate.AspNetCore.Identity</Product>
 		<Authors>Alexandre Murari Junior (alexmurari)</Authors>
 		<Company>Alexandre Murari Junior (alexmurari)</Company>
 		<_CurrentYear>$([System.DateTime]::Now.ToString(yyyy))</_CurrentYear>
 		<Copyright>Copyright (c) 2022 - $(_CurrentYear) $(Company)</Copyright>
+		<PackageTags>aspnetcore; identity; nhibernate; fluentnhibernate</PackageTags>
 		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<RepositoryUrl>https://github.com/alexmurari/FluentNHibernate.AspNetCore.Identity/</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/alexmurari/FluentNHibernate.AspNetCore.Identity/</PackageProjectUrl>
 		<!-- Keep package release notes section without indentation -->
