--- a/FluentNHibernate.AspNetCore.Identity/FluentNHibernate.AspNetCore.Identity.csproj
+++ b/FluentNHibernate.AspNetCore.Identity/FluentNHibernate.AspNetCore.Identity.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<SignAssembly>True</SignAssembly>
-		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+		<PackageId>Fluent.NHibernate.AspNetCore.Identity</PackageId>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
