--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 ﻿<Project>
 	<PropertyGroup>
 		<VersionPrefix>1.0.0</VersionPrefix>
-		<VersionSuffix>alpha.1</VersionSuffix>
+		<VersionSuffix></VersionSuffix>
 		<Product>FluentNHibernate.AspNetCore.Identity</Product>
 		<Description>Highly customizable ASP.NET Core Identity provider for NHibernate with FluentNHibernate mapping support.</Description>
 		<Authors>Alexandre Murari Junior (alexmurari)</Authors>
@@ -14,6 +14,12 @@
 		<RepositoryUrl>https://github.com/alexmurari/FluentNHibernate.AspNetCore.Identity/</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/alexmurari/FluentNHibernate.AspNetCore.Identity/</PackageProjectUrl>
 		<!-- Keep package release notes section without indentation -->
-		<PackageReleaseNotes>- Initial alpha release.</PackageReleaseNotes>
+		<PackageReleaseNotes>
+<![CDATA[| 1.0.0 - Stable Release |
+
+Breaking Changes:
+	- [NHibernateStoreOptions] SetAutoFlushSession renamed to SetSessionAutoFlush.
+	- [AddNHibernateStores] configureStoreOptions parameter is now an Action<NHibernateStoreOptions> instead of Func<NHibernateStoreOptions,NHibernateStoreOptions>.]]>
+		</PackageReleaseNotes>
 	</PropertyGroup>
 </Project>
